--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
             <div class="scroll" onclick="toggleScroll(this)">
                 <div class="scroll-content">
                     <img src="mysterybox.png" width="120px">
-                    <a href="mysterybox.html" target="_blank">🐍Mystery Box🐍</a>
+                    <a href="typography1.html" target="_blank">🐍Typography Version1🐍</a>
+                    <a href="typography2.html" target="_blank">🐍Typography Version2🐍</a>
                 </div>
             </div>
             <div class="scroll-bottom"></div>
