Uploading Finished Project 4
Uploading Finished Project 4 to github
fixed video3

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>蛇年书卷展开</title>
+    <title>Helen Ren's Website</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/gif" href="mysterybox.png">
+    <link rel="icon" type="image/gif" href="/assets/heart.png">
 </head>
 <body>
     <img src="hengpi.jpg" width="500px">
@@ -64,6 +64,9 @@
                     <img src="mysterybox.png" width="120px">
                     <a href="typography1.html" target="_blank">🐍Typography Version1🐍</a>
                     <a href="typography2.html" target="_blank">🐍Typography Version2🐍</a>
+                    <a href="ExperimentalCamera/ExperimentalCamera.html" target="_blank">📷Experimental Cam📷</a>
+                    <a href="Sophomore_Sem2_Project4/project4.html" target="_blank">🎧Rap Quiz🎧</a>
+
                 </div>
             </div>
             <div class="scroll-bottom"></div>
