hide the base ref
hi

--- a/Sophomore_Sem2_Project4/almost.html
+++ b/Sophomore_Sem2_Project4/almost.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Almost There!</title>
-  <base href="/Sophomore_Sem2_Project4/">
+  <!-- <base href="/Sophomore_Sem2_Project4/"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
   <link rel="stylesheet" href="https://use.typekit.net/htw6kjt.css">
   <link rel="stylesheet" href="https://unpkg.com/open-props@1.6.17/easings.min.css">
