--- a/Sophomore_Sem2_Project4/display1.html
+++ b/Sophomore_Sem2_Project4/display1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>You Slay!</title>
-  <base href="/Sophomore_Sem2_Project4/">
+  <!-- <base href="/Sophomore_Sem2_Project4/"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
   <!-- 掌管start quiz字样的。 网上的插件 -->
   <link rel="stylesheet" href="https://use.typekit.net/htw6kjt.css">
