--- a/Sophomore_Sem2_Project4/display3.html
+++ b/Sophomore_Sem2_Project4/display3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>You're Cooked💀</title>
-  <base href="/Sophomore_Sem2_Project4/">
+  <!-- <base href="/Sophomore_Sem2_Project4/"> -->
   <link rel="stylesheet" href="display.css">
 </head>
 <body>
