--- a/Sophomore_Sem2_Project5/project5.html
+++ b/Sophomore_Sem2_Project5/project5.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Artist Bloom</title>
+  <link rel="stylesheet" href="project5.css" />
 </head>
 <body>
-    <h1>Random Dog Finder</h1>
-    <h2>Click the button to get a dog picture</h2>
-    <br>
-    <button id="getDogBtn1">Click</button>
-    <br>
-    <img id="dogImg1" src="">
-    
-    <!-- 新增：用于显示 celebrity 名字 -->
-    <h1 id="celebrityName">Celebrity name will appear here</h1>
-
-    <script src="project5.js"></script>
+  <div class="bg-blur"></div>
+  <div class="container">
+    <h1>🌸 Artist Bloom</h1>
+    <input type="text" id="artistIdInput" placeholder="Enter ID (e.g. 112024)">
+    <button id="searchBtn">✨ Explore</button>
+    <div id="artistCard"></div>
+  </div>
+  <script src="project5.js"></script>
 </body>
 </html>
