change pathway and rename the web
mannualy do things like this  :

window.location.href = `/Sophomore_Sem2_Project5/player2.html?artist=${encodeURIComponent(artist)}`;

--- a/Sophomore_Sem2_Project5/player2.html
+++ b/Sophomore_Sem2_Project5/player2.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Vinyl Gallery</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="player2.css">
+  <link rel="stylesheet" href="/Sophomore_Sem2_Project5/style.css">
+  <link rel="stylesheet" href="/Sophomore_Sem2_Project5/player2.css">
 </head>
 <body>
   <div class="container">
     <h1>Vinyl Gallery</h1>
     <div id="vinylGallery"></div>
   </div>
-  <script src="player2.js"></script>
+  <script src="/Sophomore_Sem2_Project5/player2.js"></script>
 </body>
 </html>
