--- a/Sophomore_Sem2_Project5/player3.html
+++ b/Sophomore_Sem2_Project5/player3.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>🎵 Album Detail</title>
-  <link rel="stylesheet" href="style.css">  <!-- ✅ 使用了原来的共享 CSS -->
-  <link rel="stylesheet" href="player3.css"> <!-- ✅ 新增页面专属 CSS -->
+  <link rel="stylesheet" href="/Sophomore_Sem2_Project5/style.css">  <!-- ✅ 使用了原来的共享 CSS -->
+  <link rel="stylesheet" href="/Sophomore_Sem2_Project5/player3.css"> <!-- ✅ 新增页面专属 CSS -->
 </head>
 <body>
    
@@ -12,6 +12,6 @@
   <div class="container">
     <div id="vinylDetail"></div>
   </div>
-  <script src="player3.js"></script>
+  <script src="/Sophomore_Sem2_Project5/player3.js"></script>
 </body>
 </html>
