--- a/Sophomore_Sem2_Project5/player1.html
+++ b/Sophomore_Sem2_Project5/player1.html
@@ -30,6 +30,6 @@
     <input type="text" id="artistInput" placeholder="enter artist name ">
     <button id="searchBtn">Explore</button>
   </div>
-  <script src="/Sophomore_Sem2_Project5/player1.js"></script>
+  <script src="player1.js"></script>
 </body>
 </html>
