--- a/Sophomore_Sem2_Project5/player1.html
+++ b/Sophomore_Sem2_Project5/player1.html
@@ -22,7 +22,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Album Search</title>
-  <link rel="stylesheet" href="project5style.css">
+  <link rel="stylesheet" href="test.css">
 </head>
 <body>
   <h1>Hello</h1>
