--- a/Sophomore_Sem2_Project5/player1.html
+++ b/Sophomore_Sem2_Project5/player1.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="project5style.css">
 </head>
 <body>
-  <h1>Hello</h1>
+  <!-- <h1>Hello</h1> -->
   <div class="container">
     <h1>Album Search</h1>
     <input type="text" id="artistInput" placeholder="enter artist name ">
