--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <a href="typography2.html" target="_blank">🐍Typography Version2🐍</a>
                     <a href="ExperimentalCamera/ExperimentalCamera.html" target="_blank">📷Experimental Cam📷</a>
                     <a href="Sophomore_Sem2_Project4/project4.html" target="_blank">🎧Rap Quiz🎧</a>
-                    <a href="Sophomore_Sem2_Project5/player1.html" target="_blank">💽Album Search💽</a>
+                    <a href="Sophomore_Sem2_Project5/player1.html" target="_blank">💽Album Search Tool💽</a>
 
 
                 </div>
