注意事项 以后作业

--- a/Sophomore_Sem2_Project5/player1.html
+++ b/Sophomore_Sem2_Project5/player1.html
@@ -1,21 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>🌼 Artist Bloom</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="container">
-    <h1>🌼 Artist Bloom</h1>
-    <input type="text" id="artistInput" placeholder="Enter artist name (e.g. the weeknd)">
-    <button id="searchBtn">✨ Explore</button>
-  </div>
-  <script src="player1.js"></script>
-</body>
-</html>
- -->
-
 
 <!DOCTYPE html>
 <html lang="en">
@@ -25,8 +7,11 @@
   <link rel="stylesheet" href="project5style.css">
 </head>
 <body>
-  <!-- <h1>Hello</h1> -->
-  <div class="container">
+  <!-- 这个是css class=“container” 意外的的部分（👇）--> 
+  <!-- <h1>Hello</h1>   -->
+   <!-- 这个是css class=“container” 以内的部分（👇） 这个html refer的css里面必须有 container这个修饰框-->  
+  <div class="container">  
+
     <h1>Album Search</h1>
     <input type="text" id="artistInput" placeholder="enter artist name ">
     <button id="searchBtn">Explore</button>
