add project1 to main page
the link called burger added

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                     <a href="ExperimentalCamera/ExperimentalCamera.html" target="_blank">📷Experimental Cam📷</a>
                     <a href="Sophomore_Sem2_Project4/project4.html" target="_blank">🎧Rap Quiz🎧</a>
                     <a href="Sophomore_Sem2_Project5/player1.html" target="_blank">💽Album Search💽</a>
+                    <a href="Junior_S1/Project1/page1.html" target="_blank">🍔Burger🍔</a>
 
                     <!-- 
                     卧槽 我他妈要从这个最后final吸取教训。
