--- a/Junior_S1/Project1/proj1_page1.html
+++ b/Junior_S1/Project1/proj1_page1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Burger Hover Grid Refined</title>
+  <title>Burger</title>
   <style>
     body {
       margin: 0;
@@ -10,11 +10,8 @@
       display: grid;
       place-items: center;
       background-color: #f3dec9;
-      
-  /* background: url("project1images/page1images/bottom-bun.jpg") no-repeat center center;
-  background-size: cover; */
-
-
+      /* background: url("project1images/page1images/bottom-bun.jpg") no-repeat center center;
+      background-size: cover; */
     }
 
     .burger {
@@ -22,17 +19,13 @@
       height: 95vh;
       max-height: 956px;
       width: 540px;
-
       /* 增加 top-gap 和 bottom-gap */
       grid-template-rows: 0.5fr 1fr 0.3fr 0.1fr 0.2fr 0.2fr 1fr;
       grid-template-columns: 1fr 1fr; /* tomato 分两列 */
       gap: 2px;
-
       justify-items: center;
       transition: grid-template-rows 0.5s ease;
     }
-
-
 
     .layer {
       border-radius: 20px;
@@ -42,111 +35,223 @@
     }
 
     /* gaps */
-    .gap-top, .gap-bot { grid-column: 1 / 3; }
+    .gap-top,
+    .gap-bot {
+      grid-column: 1 / 3;
+    }
 
     /* buns */
-    .bun-top  { background:#d4a373; border-top-left-radius:160px; border-top-right-radius:160px; width:100%; grid-column: 1 / 3; background-size: contain; }
-    .bun-bot  { background:#d4a373; border-bottom-left-radius:120px; border-bottom-right-radius:120px; width:100%; grid-column: 1 / 3; }
+    .bun-top {
+      background: #d4a373;
+      border-top-left-radius: 160px;
+      border-top-right-radius: 160px;
+      width: 100%;
+      grid-column: 1 / 3;
+      background-size: contain;
+    }
+
+    .bun-bot {
+      background: #d4a373;
+      border-bottom-left-radius: 120px;
+      border-bottom-right-radius: 120px;
+      width: 100%;
+      grid-column: 1 / 3;
+    }
 
     /* cheese */
-    .cheese   { background:#f2cc8f; width:95%; border-radius:14px; grid-column: 1 / 3; }
+    .cheese {
+      background: #f2cc8f;
+      width: 95%;
+      border-radius: 14px;
+      grid-column: 1 / 3;
+    }
 
     /* tomato 两个独立格子 */
-    .tomato-left  { background:#f28b82; border-radius:12px; width:90%; background-size: contain;
-;
-background-position: center;}
+    .tomato-left {
+      background: #f28b82;
+      border-radius: 12px;
+      width: 90%;
+      background-size: contain;
+      background-position: center;
+    }
 
     /* tomato 右面文本部分 */
-    .tomato-right { background:#f28b82; border-radius:12px; width:90%; position: relative;
-  overflow: hidden;}
-    .tomato-right .text {
-  opacity: 0;
-  padding: 10px;
-  color: white;
-  font-size: 19px;
-  font: sans-serif;
-  text-align: left;
-  transition: opacity 0.5s ease;
-}
+    .tomato-right {
+      background: #f28b82;
+      border-radius: 12px;
+      width: 90%;
+      position: relative;
+      overflow: hidden;
+    }
 
-.tomato-right:hover .text {
-  opacity: 1;
-}
+    .tomato-right .text {
+      opacity: 0;
+      padding: 10px;
+      color: white;
+      font-size: 19px;
+      font: sans-serif;
+      text-align: left;
+      transition: opacity 0.5s ease;
+    }
+
+    .tomato-right:hover .text {
+      opacity: 1;
+    }
+
     /* tomato-red */
     .tomato-red {
-  background:#e53935;
-  width:90%;
-  border-radius:16px;
-  grid-column: 1 / 3;
-  position: relative;
-  overflow: hidden;
-}
+      background: #e53935;
+      width: 90%;
+      border-radius: 16px;
+      grid-column: 1 / 3;
+      position: relative;
+      overflow: hidden;
+    }
 
-.tomato-red .side-effects {
-  color: #fff;
-  font-family: "Helvetica Neue", sans-serif;
-  padding: 15px;
-  text-align: center;
-}
+    .tomato-red .side-effects {
+      color: #fff;
+      font-family: "Helvetica Neue", sans-serif;
+      padding: 15px;
+      text-align: center;
+    }
 
-.tomato-red .side-effects h3 {
-  color: yellow;
-  text-shadow: 2px 2px 4px black;
-  margin-bottom: 10px;
-}
+    .tomato-red .side-effects h3 {
+      color: yellow;
+      text-shadow: 2px 2px 4px black;
+      margin-bottom: 10px;
+    }
 
-.tomato-red .side-effects ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  line-height: 1.6;
-  font-size: 14px;
-}
+    .tomato-red .side-effects ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      line-height: 1.6;
+      font-size: 14px;
+    }
 
-.tomato-red .side-effects ul li {
-  margin: 4px 0;
-  font-weight: bold;
-  color: #ffcccc;
-}
+    .tomato-red .side-effects ul li {
+      margin: 4px 0;
+      font-weight: bold;
+      color: #ffcccc;
+    }
 
     /* lettuce */
+    .lettuce {
+      background: #81c784;
+      width: 95%;
+      grid-column: 1 / 3;
+      /* 去掉普通圆角 */
+      border-radius: 0;
+      background-size: contain;
+      background-position: center;
 
-.lettuce  { 
-  background:#81c784; 
-  width:95%; 
-  grid-column: 1 / 3; 
-  /* 去掉普通圆角 */
-  border-radius:0;  
-  background-size: contain;
-;
-background-position: center;
-
-  /* 加波浪效果 */
-  clip-path: polygon(
-    0% 20%, 10% 30%, 20% 15%, 30% 30%, 40% 15%, 50% 30%, 
-    60% 15%, 70% 30%, 80% 15%, 90% 30%, 100% 20%, 
-    100% 80%, 90% 70%, 80% 85%, 70% 70%, 60% 85%, 50% 70%, 
-    40% 85%, 30% 70%, 20% 85%, 10% 70%, 0% 80%
-  );
-}
+      /* 加波浪效果 */
+      clip-path: polygon(
+        0% 20%,
+        10% 30%,
+        20% 15%,
+        30% 30%,
+        40% 15%,
+        50% 30%,
+        60% 15%,
+        70% 30%,
+        80% 15%,
+        90% 30%,
+        100% 20%,
+        100% 80%,
+        90% 70%,
+        80% 85%,
+        70% 70%,
+        60% 85%,
+        50% 70%,
+        40% 85%,
+        30% 70%,
+        20% 85%,
+        10% 70%,
+        0% 80%
+      );
+    }
 
     /* hover 展开逻辑 */
-    .burger:has(.bun-top:hover)  { grid-template-rows: 0.5fr 6fr 1fr 1fr 1fr 1fr 0.5fr; }
-    .burger:has(.cheese:hover)   { grid-template-rows: 0.5fr 1fr 6fr 1fr 1fr 1fr 0.5fr; }
-    .burger:has(.tomato-left:hover)  { grid-template-rows: 0.5fr 1fr 1fr 6fr 1fr 1fr 0.5fr; }
-    .burger:has(.tomato-right:hover) { grid-template-rows: 0.5fr 1fr 1fr 6fr 1fr 1fr 0.5fr; }
-    .burger:has(.tomato-red:hover)   { grid-template-rows: 0.5fr 1fr 1fr 1fr 6fr 1fr 0.5fr; }
-    .burger:has(.lettuce:hover)      { grid-template-rows: 0.5fr 1fr 1fr 1fr 1fr 6fr 0.5fr; }
-    .burger:has(.bun-bot:hover)      { grid-template-rows: 0.5fr 1fr 1fr 1fr 1fr 1fr 6fr; }
+    .burger:has(.bun-top:hover) {
+      grid-template-rows: 0.5fr 6fr 1fr 1fr 1fr 1fr 0.5fr;
+    }
+
+    .burger:has(.cheese:hover) {
+      grid-template-rows: 0.5fr 1fr 6fr 1fr 1fr 1fr 0.5fr;
+    }
+
+    .burger:has(.tomato-left:hover) {
+      grid-template-rows: 0.5fr 1fr 1fr 6fr 1fr 1fr 0.5fr;
+    }
+
+    .burger:has(.tomato-right:hover) {
+      grid-template-rows: 0.5fr 1fr 1fr 6fr 1fr 1fr 0.5fr;
+    }
+
+    .burger:has(.tomato-red:hover) {
+      grid-template-rows: 0.5fr 1fr 1fr 1fr 6fr 1fr 0.5fr;
+    }
+
+    .burger:has(.lettuce:hover) {
+      grid-template-rows: 0.5fr 1fr 1fr 1fr 1fr 6fr 0.5fr;
+    }
+
+    .burger:has(.bun-bot:hover) {
+      grid-template-rows: 0.5fr 1fr 1fr 1fr 1fr 1fr 6fr;
+    }
 
     /* hover 切换为图片 */
-    .bun-top:hover    { background-image:url("project1images/page1images/top-bun.jpg"); }
-    .cheese:hover     { background-image:url("project1images/page1images/cheese.jpg"); }
-    .tomato-left:hover{ background-image:url("project1images/page1images/tomato-left.jpg"); }
-    .tomato-right:hover{ background-image:url("project1images/page1images/tomato-right.jpg"); }
-    .tomato-red:hover { background-image:url("project1images/page1images/tomato-red.jpg"); }
-    .lettuce:hover    { background-image:url("project1images/page1images/lettuce.jpg"); }
-    .bun-bot:hover    { background-image:url("project1images/page1images/bottom-bun.jpg"); }
+    .bun-top:hover {
+      background-image: url("project1images/page1images/top-bun.jpg");
+    }
+
+    .cheese:hover {
+      background-image: url("project1images/page1images/cheese.jpg");
+    }
+
+    .tomato-left:hover {
+      background-image: url("project1images/page1images/tomato-left.jpg");
+    }
+
+    .tomato-right:hover {
+      background-image: url("project1images/page1images/tomato-right.jpg");
+    }
+
+    .tomato-red:hover {
+      background-image: url("project1images/page1images/tomato-red.jpg");
+    }
+
+    .lettuce:hover {
+      background-image: url("project1images/page1images/lettuce.jpg");
+    }
+
+    .bun-bot:hover {
+      background-image: url("project1images/page1images/bottom-bun.jpg");
+    }
+    /* 页面按钮 */
+    .page-buttons {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      display: flex;
+      gap: 10px;
+      z-index: 99;
+    }
+    .page-buttons a {
+      padding: 8px 14px;
+      background: #fff;
+      color: #111;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 6px;
+      transition: all 0.3s ease;
+    }
+    .page-buttons a:hover {
+      background: #ff4d6d;
+      color: #fff;
+      transform: scale(1.1);
+    }
   </style>
 </head>
 <body>
@@ -156,30 +261,34 @@ background-position: center;
     <div class="layer cheese"></div>
     <div class="layer tomato-left"></div>
     <div class="layer tomato-right">
-        <div class="text">
-  Hims’ stock price has soared not only because of business growth, but also due to its frequent exposure in public discussions. From the overwhelming subway advertisements to the constant buzz on social media, the company has become a “new favorite” in the eyes of the public. With market sentiment continuously rising and investors rushing in, the stock has naturally taken off.
-  </div>
+      <div class="text">
+        Hims’ stock price has soared not only because of business growth, but also due to its frequent exposure in public discussions. From the overwhelming subway advertisements to the constant buzz on social media, the company has become a “new favorite” in the eyes of the public. With market sentiment continuously rising and investors rushing in, the stock has naturally taken off.
+      </div>
     </div>
     <div class="layer tomato-red">
-  <div class="side-effects">
-    <h3>⚠ Side Effects ⚠</h3>
-    <ul>
-      <li>Diarrhea, Constipation, Nausea</li>
-      <li>Pancreatitis, Gallbladder disease</li>
-      <li>Ozempic face, Vision changes</li>
-      <li>Hypoglycemia, Tachycardia, Appetite loss</li>
-      <li>Kidney disease, Acute kidney injury</li>
-      <li>Allergic reactions, Confusion</li>
-      <li>Fatigue, Headache, Heartburn, Bloating</li>
-      <li>Stomach pain, Ileus</li>
-      <li>Diabetic retinopathy, Thyroid neoplasm</li>
-    </ul>
-  </div>
-</div>
-
+      <div class="side-effects">
+        <h3>⚠ Side Effects ⚠</h3>
+        <ul>
+          <li>Diarrhea, Constipation, Nausea</li>
+          <li>Pancreatitis, Gallbladder disease</li>
+          <li>Ozempic face, Vision changes</li>
+          <li>Hypoglycemia, Tachycardia, Appetite loss</li>
+          <li>Kidney disease, Acute kidney injury</li>
+          <li>Allergic reactions, Confusion</li>
+          <li>Fatigue, Headache, Heartburn, Bloating</li>
+          <li>Stomach pain, Ileus</li>
+          <li>Diabetic retinopathy, Thyroid neoplasm</li>
+        </ul>
+      </div>
+    </div>
     <div class="layer lettuce"></div>
     <div class="layer bun-bot"></div>
     <div class="gap-bot"></div>
+  </div>
+   <div class="page-buttons">
+    <a href="proj1_page1.html">1</a>
+    <a href="proj1_page2.html">2</a>
+    <a href="proj1_page3.html">3</a>
   </div>
 </body>
 </html>
