--- a/Junior_S1/Project1/proj1_page1.html
+++ b/Junior_S1/Project1/proj1_page1.html
@@ -257,15 +257,15 @@
 <body>
   <div class="burger">
     <div class="gap-top"></div>
-    <div class="layer bun-top"></div>
-    <div class="layer cheese"></div>
-    <div class="layer tomato-left"></div>
-    <div class="layer tomato-right">
+    <div class="layer bun-top" alt="Top bun of the burger"></div>
+    <div class="layer cheese" alt="Cheese layer"></div>
+    <div class="layer tomato-left" alt="Left tomato slice"></div>
+    <div class="layer tomato-right" alt="Right tomato slice">
       <div class="text">
         Hims’ stock price has soared not only because of business growth, but also due to its frequent exposure in public discussions. From the overwhelming subway advertisements to the constant buzz on social media, the company has become a “new favorite” in the eyes of the public. With market sentiment continuously rising and investors rushing in, the stock has naturally taken off.
       </div>
     </div>
-    <div class="layer tomato-red">
+    <div class="layer tomato-red" alt="Red tomato slice">
       <div class="side-effects">
         <h3>⚠ Side Effects ⚠</h3>
         <ul>
