--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                     <a href="Sophomore_Sem2_Project4/project4.html" target="_blank">🎧Rap Quiz🎧</a>
                     <a href="Sophomore_Sem2_Project5/player1.html" target="_blank">💽Album Search💽</a>
                     <a href="Junior_S1/Project1/proj1_page1.html" target="_blank">🍔CSS Grid🍔</a>
+                    <a href="Junior_S1/Studio_Project_1/network.html" target="_blank">Self As System</a>
 
                     <!-- 
                     卧槽 我他妈要从这个最后final吸取教训。
