--- a/Junior_S1/Studio_Project_1/map.html
+++ b/Junior_S1/Studio_Project_1/map.html
@@ -7,14 +7,12 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
     #map {
-      height: 100vh;  /* 让地图全屏 */
+      height: 100vh;
       width: 100%;
     }
-
-/* 单独写，不要放在 #map 里面 */
-.leaflet-interactive {
-  filter: blur(5px) saturate(10) brightness(1.2);
-}
+    .leaflet-interactive {
+      filter: blur(5px) saturate(10) brightness(1.2);
+    }
   </style>
 </head>
 <body>
@@ -23,73 +21,111 @@
   <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
-    // 定义你的坐标数组
+    // 坐标数组
     const locations = [
-  [37.5211456, -122.3140069], // 3130
-  [37.5341627, -122.3350642], // CSM
-  [37.6153981, -122.3898792], // SFO
-  [40.6468596, -73.7799381],  // JFK
-  [40.7357576, -73.9935817],  // dorm
-  [40.7353472, -73.9935423],  // The New School
-  [36.8968441, -111.4084904], // phonix
-  [40.8203520, -73.9787350],   // sam home
-   [37.3332482, -122.1089714] //home 13889
+      [37.5211456, -122.3140069], // 1 → Home2
+      [37.5341627, -122.3350642], // 2 → Gym
+      [37.6153981, -122.3898792], // 3 → SFO
+      [40.6468596, -73.7799381],  // 4 → JFK
+      [40.7357576, -73.9935817],  // 5 → Dorm
+      [40.7353472, -73.9935423],  // 6 → The New School
+      [36.8968441, -111.4084904], // 7 → Phonix
+      [40.8203520, -73.9787350],  // 8 → Employer’s Home
+      [37.3332482, -122.1089714]  // 9 → Home home
     ];
 
-    // 初始化地图（这里以第一个点为中心）
+    // 名称数组
+    const names = [
+      "Home2",
+      "Gym",
+      "San Francisco Airport",
+      "New York Airport",
+      "Freshmen Year Dorm",
+      "The New School",
+      "Phonix",
+      "Employer’s Home",
+      "Home home"
+    ];
+
+    // ✅ 节点颜色逻辑 (和 network.html 保持一致)
+    function getNodeColor(index) {
+      if ([1, 9].includes(index + 1)) return [55, 68, 163];   // 蓝色
+      if ([2, 6, 7, 8].includes(index + 1)) return [244, 115, 250]; // 粉色
+      if ([3, 4, 5].includes(index + 1)) return [167, 88, 245]; // 紫色
+      return [200, 200, 200]; // fallback
+    }
+
+    // ✅ edges 逻辑 (和 network.html 保持一致)
+    const edges = [
+      { from: 1, to: 2, color: [167, 88, 245] },   // 紫
+      { from: 1, to: 3, color: [55, 68, 163] },    // 蓝
+      { from: 1, to: 9, color: [244, 115, 250] },  // 粉
+      { from: 4, to: 3, color: [167, 88, 245] },   // 紫
+      { from: 4, to: 5, color: [55, 68, 163] },    // 蓝
+      { from: 5, to: 6, color: [167, 88, 245] },   // 紫
+      { from: 3, to: 7, color: [244, 115, 250] },  // 粉
+      { from: 3, to: 9, color: [167, 88, 245] }    // 紫
+    ];
+
+    // 初始化地图
     const map = L.map('map').setView(locations[0], 5);
 
-    // // 添加底图图层 (OpenStreetMap)
-    // L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    //   maxZoom: 19,
-    //   attribution: '© OpenStreetMap'
-    // }).addTo(map);
+    L.tileLayer('https://tiles.stadiamaps.com/tiles/stamen_watercolor/{z}/{x}/{y}.jpg', {
+      attribution: '&copy; <a href="https://stadiamaps.com/">Stadia Maps</a> &copy; <a href="https://stamen.com/">Stamen Design</a> &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>',
+      minZoom: 3,
+      maxZoom: 17
+    }).addTo(map);
 
-//     L.tileLayer('https://cartodb-basemaps-a.global.ssl.fastly.net/dark_all/{z}/{x}/{y}{r}.png', {
-//   attribution: '&copy; <a href="https://www.openstreetmap.org/">OSM</a> &copy; <a href="https://carto.com/">CARTO</a>',
-//   subdomains: 'abcd',
-//   maxZoom: 19
-// }).addTo(map);
+    // URL 参数
+    const urlParams = new URLSearchParams(window.location.search);
+    const lat = parseFloat(urlParams.get("lat"));
+    const lng = parseFloat(urlParams.get("lng"));
 
-L.tileLayer('https://tiles.stadiamaps.com/tiles/stamen_watercolor/{z}/{x}/{y}.jpg', {
-  attribution: '&copy; <a href="https://stadiamaps.com/">Stadia Maps</a> &copy; <a href="https://stamen.com/">Stamen Design</a> &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>',
-  minZoom: 3,
-  maxZoom: 17
-}).addTo(map);
+    // 点击的点 index
+    const clickedIndex = locations.findIndex(
+      ([la, ln]) => Math.abs(la - lat) < 1e-6 && Math.abs(ln - lng) < 1e-6
+    );
 
-
-
-
-
-    // 遍历所有地点，加红色圆点
+    // 遍历所有点
     locations.forEach(([lat, lng], index) => {
+      let baseColor = getNodeColor(index);
+      let color = (index === clickedIndex) ? "yellow" : `rgb(${baseColor[0]},${baseColor[1]},${baseColor[2]})`;
+      let radius = (index === clickedIndex) ? 30 : 12;
+
       L.circleMarker([lat, lng], {
-        color: 'red',
-        radius: 8,
-        fillColor: 'red',
-        fillOpacity: 0.8
+        color: color,
+        radius: radius,
+        fillColor: color,
+        fillOpacity: 0.9
       }).addTo(map)
-        .bindPopup(`Location ${index + 1}`);
+        .bindPopup(names[index]);
     });
-    
-    // 获取 URL 参数
-const urlParams = new URLSearchParams(window.location.search);
-const lat = parseFloat(urlParams.get("lat"));
-const lng = parseFloat(urlParams.get("lng"));
 
-if (!isNaN(lat) && !isNaN(lng)) {
-  // 把地图中心移动到点击的点
-  map.setView([lat, lng], 13);
+    // 如果有点击点 → 画连接线
+    if (clickedIndex !== -1) {
+      map.setView(locations[clickedIndex], 13);
 
-  // 给这个点画一个高亮的黄色圆圈
-  L.circleMarker([lat, lng], {
-    color: 'pink',
-    radius: 30,
-    fillColor: 'pink',
-    fillOpacity: 0.9
-  }).addTo(map).bindPopup("Location Clicked").openPopup();
-}
+      edges.forEach(edge => {
+        if (edge.from === clickedIndex+1 || edge.to === clickedIndex+1) {
+          const otherId = edge.from === clickedIndex+1 ? edge.to : edge.from;
+          const otherLoc = locations[otherId-1];
 
+          L.polyline(
+            [ locations[clickedIndex], otherLoc ],
+            {
+              color: `rgb(${edge.color[0]},${edge.color[1]},${edge.color[2]})`,
+              weight: 4,
+              opacity: 0.8
+            }
+          ).addTo(map);
+        }
+      });
+    }
   </script>
 </body>
 </html>
+
+
+
+
+
