--- a/Junior_S1/Studio_Project_1/network.html
+++ b/Junior_S1/Studio_Project_1/network.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Watercolor Network with Fixed Sizes</title>
+  <title>Network_cloud</title>
   <style>
     body { margin:0; overflow:hidden; }
     canvas { display:block; }
